--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <button class="link" onclick="switchContent('theory')">
           <img class="icon" src="images/theory_img.png" alt="THEORY" />
-          <span>Theory</span>
+          <span>Theory & Application</span>
         </button>
 
         <button class="link" onclick="switchContent('procedure')">
