[chore + feature] Corrected code switch logic and quiz logic,  added quiz report, improved prsentation of enumerates

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/harmonic16-dark.min.css"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
   </head>
 
   <body>
     <header class="header">
       <div class="logo-container">
         <div class="logo">
-          <a href="https://www.vlab.andcollege.du.ac.in" rel="noopener" target="_blank">
+          <a
+            href="https://www.vlab.andcollege.du.ac.in"
+            rel="noopener"
+            target="_blank"
+          >
             <img class="logo-img" src="images/logo.png" alt="VLab" />
           </a>
         </div>
@@ -50,7 +54,7 @@
 
         <button class="link" onclick="switchContent('theory')">
           <img class="icon" src="images/theory_img.png" alt="THEORY" />
-          <span>Theory & Application</span>
+          <span>Theory & Appli.</span>
         </button>
 
         <button class="link" onclick="switchContent('procedure')">
@@ -97,16 +101,64 @@
           </div>
         </div>
 
-        <!-- Theory -->
+        <!-- Theory & Applications -->
         <div class="container" id="theory">
-          <div class="title">Theory</div>
-          <div class="content"></div>
+          <div class="title">Theory & Applications</div>
+          <div class="content">
+            <p>
+              This section covers the fundamental theories and applications of
+              the concept.
+            </p>
+
+            <span>Key Concepts</span>
+            <ul>
+              <li>Fundamentals of Data Structures</li>
+              <li>
+                Algorithms and Their Applications
+                <ul>
+                  <li>Sorting Algorithms</li>
+                  <li>Searching Algorithms</li>
+                </ul>
+              </li>
+              <li>Time Complexity Analysis</li>
+            </ul>
+
+            <span>Applications in Real World</span>
+            <ol>
+              <li>Application of Sorting Algorithms in Search Engines</li>
+              <li>Machine Learning Algorithms in Predictive Analytics</li>
+              <li>Data Structures in Web Development</li>
+            </ol>
+
+          </div>
         </div>
 
         <!-- Procedure -->
         <div class="container" id="procedure">
           <div class="title">Procedure</div>
-          <div class="content"></div>
+          <div class="content">
+            <p>
+              This section provides the steps and procedure for implementing the
+              concept discussed above.
+            </p>
+
+            <span>Steps for Sorting Algorithms</span>
+            <ol>
+              <li>Choose the appropriate sorting algorithm based on data</li>
+              <li>Apply the sorting algorithm to the dataset</li>
+              <li>Analyze the time complexity and performance</li>
+            </ol>
+
+            <span>Steps for Implementing Search Algorithms</span>
+            <ul>
+              <li>Identify the data structure to be used</li>
+              <li>
+                Choose the best search algorithm (e.g., Linear Search, Binary
+                Search)
+              </li>
+              <li>Test the algorithm on various datasets</li>
+            </ul>
+          </div>
         </div>
 
         <!-- Code -->
@@ -121,7 +173,7 @@
               name="codeSwitch"
               checked
             />
-            <label for="cppRadio" onclick="toggleCode('cpp')">C++</label>
+            <label for="cppRadio">C++</label>
 
             <input
               class="togswt"
@@ -129,28 +181,20 @@
               id="pythonRadio"
               name="codeSwitch"
             />
-            <label for="pythonRadio" onclick="toggleCode('python')"
-              >Python</label
-            >
+            <label for="pythonRadio">Python</label>
           </div>
 
           <div class="code-blocks">
             <div id="cppCode" class="code-block active">
               <div class="code-content">
-                <pre><code class="language-cpp">// C++
-                    </code></pre>
-                <button class="copy-button" onclick="copyCode('cppCode')">
-                  Copy
-                </button>
+                <pre><code class="language-cpp">// C++ Code Example</code></pre>
+                <button class="copy-button">Copy</button>
               </div>
             </div>
-            <div id="pyCode" class="code-block" style="display: none">
+            <div id="pythonCode" class="code-block">
               <div class="code-content">
-                <pre><code class="language-python"> #python
-                    </code></pre>
-                <button class="copy-button" onclick="copyCode('pyCode')">
-                  Copy
-                </button>
+                <pre><code class="language-python"># Python Code Example</code></pre>
+                <button class="copy-button">Copy</button>
               </div>
             </div>
           </div>
@@ -175,7 +219,13 @@
           <div class="title">Quiz</div>
           <p id="question"></p>
           <div id="choices" class="choices"></div>
-          <button id="next-btn" class="next-button">Next</button>
+          <button id="save-btn" class="save-button">Save</button>
+          <button id="next-btn" class="next-button" style="display: none">
+            Next
+          </button>
+          <button id="retake-btn" style="display: none">Retake Quiz</button>
+          <div id="quiz-report" style="display: none"></div>
+          <!-- Section to display quiz report -->
         </div>
 
         <!-- References -->
@@ -197,7 +247,7 @@
         <div class="container" id="tnt">
           <div class="title">Team & Tools</div>
           <div class="content">
-            <span>Students</span>
+            <h3>Students</h3>
             <ul class="ref-list">
               <li>
                 <a href="profile url if you have" rel="noopener" target="_blank"
@@ -205,11 +255,11 @@
                 >
               </li>
             </ul>
-            <span>Mentors</span>
+            <h3>Mentors</h3>
             <ul class="ref-list">
               <li><span> Mentor Name</span></li>
             </ul>
-            <span>Tools Used</span>
+            <h3>Tools Used</h3>
             <ul class="tools-list">
               <li>
                 <span> Add tools used here </span>
