Added Responsive & styled  Form Inputs

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ function addResourceInstance() {
               <p>Circles represents Processes and Squares represents Resource-Instances</p>
               <img src="./images/Process.png" alt="resouce select" class="Select"><img src="./images/Resource.png" alt="process select" class="Select">
               <p>To select/de-select a Process/Resource-Instance, just right click on it.</p>
-              <img src="./images/Process_select.png" alt="resouce select" class="Select"><img src="./images/resource_select.png" alt="process select" class="Select">
+              <img src="./images/process_select.png" alt="process select" class="Select"><img src="./images/resource_select.png" alt="process select" class="Select">
               <p>To create an Edge, first select a Process/Resource-Instance and then select another Process/Resource-Instance(Edge will be created)</p>
               <p><img src="./images/Edge1.png" alt="resouce->process" class="Edge">is Assignment Edge</p>
               <p><img src="./images/Edge2.png" alt="process->resoucre" class="Edge">is Resquest Edge</p>
