--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="container" id="aim">
         <div class="title">Aim</div>
         <div class="content">
-          <p>The objective of this experiment is to provide a comprehensive understanding of how Resource Allocation Graphs (RAGs) are used in operating systems to model the allocation of resources to processes and to detect potential deadlocks. 
+          <p>The objective of this experiment is to provide a comprehensive understanding of Resource Allocation Graphs (RAGs) and their usage in operating systems for allocation of resources to processes and to detect potential deadlocks. 
             </p>
             <br>
             <p>This simulation helps users visualize how resources and processes interact, and how deadlocks can be detected before they cause system failures. It serves as a practical tool to deepen one’s understanding of deadlock detection mechanisms, which are crucial for designing robust, concurrent systems in operating systems and distributed computing environments.</P>
@@ -118,28 +118,31 @@
         <div class="content">
           <span>Key Concepts</span>
             <ul>
-            <li>Resource Allocation Graph:</li>
+            <li>Resource Allocation Graph (RAG):</li>
             <p>
-              Also Known as RAG, is a type of Directed graph with nodes representing either programmes or resources and arrows representing either allocation of a resource to a programme, or the request by a programme to access a resource, it is useful in visualising which programme is holding and requesting which resource and which resource is being used or is free, it is also useful in determining if the condition of programmes and resources might result in a deadlock or not
+              A type of Directed graph with nodes representing either programmes or resources and arrows representing either allocation of a resource to a programme, or the request by a programme to access a resource, it is useful in visualising which programme is holding and requesting which resource and which resource is being used or is free, it is also useful in determining if the condition of programmes and resources might result in a deadlock or not
             </p>
             <br>
             <li>Deadlock</li>
+
             <p>
-              A situation where programmes are stuck due to ending up in a situation such that a set of programmes being unable to get the data they requested is being held by another programme and they themselves are holding onto resource required by another programme resulting in a situation where no resource can be freed for the continuation of any of those programme’s execution
+              A deadlock is a situation where processes are stuck. This happens when a set of processes cannot acquire the resources they have requested because those resources are held by other processes, and those processes are, in turn, holding onto resources needed by the first set. This results in a scenario where no process can continue its execution.
             </p>
             <br>
             <li>Finding Deadlock</li>
             <p>
-              The procedure of finding a deadlock depends on whether the resources are single instance or multi-instance. Since in our case we assume the resources are multiple instance, finding deadlock is more difficulty, but generally, we can say that a deadlock may be present if the given 4 conditions are present in the RAG:
+              The procedure of finding a deadlock depends on whether the resources are single instance or multi-instance. Since in our case we assume the resources are multiple instance, finding deadlock is more difficult, but generally, we can say that a deadlock may be present if the given 4 conditions are present in the RAG:
             </p>
             <br>
             </ul>
 
-            <span>Applications in Real World</span>
+            <span>Applications in the Real World</span>
             <ol>
-              <li>CPU Proccess Maintanance</li>
-              <li>Time Table conflict solving</li>
-              <li>Proccess Conflict solving</li>
+              <li>Server Load Balancing – Using RAGs to evenly distribute requests across available servers and avoid bottlenecks.</li>
+              <li>Operating Systems – Managing process-resource allocation to detect and prevent deadlocks in CPU and memory usage.</li>
+              <li>Database Management – Ensuring transaction scheduling doesn’t lead to resource deadlocks.</li>
+              <li>Cloud Resource Management – Allocating virtual machines and storage resources efficiently to various services.</li>
+              <li>Traffic Systems – Coordinating traffic light resources and vehicle flows to prevent circular wait deadlocks.</li>
             </ol>
         </div>
       </div>
@@ -149,25 +152,29 @@
         <div class="title">Procedure</div>
         <div class="content">
           <p>
-              The procedure to this lab would be done in a two step way:
+              The procedure to this lab would be done in a two-step way:
             </p>
             <br>
-            <span>Creating the RAG using the input given by the user:</span>
             <ol>
-              <li>The User adds the no. Of resources and the instances in each resources that he wants to be in the graph</li>
-              <li>The User adds the no. Of process he wants to be in the graph</li>
-              <li>Finally, the User Right clicks the process then a resources to show a Request and right clicks a resource then a process to show a Hold.</li>
-            </ol>
-            <br>
-            <span>Finding Deadlock in the Given Graph by the user:</span>
-            <ol>
-              <li>To check for a possible deadlock, we check if the 4 conditions required for the presence of one is met or not</li>
-              <li>Since each resourcs cannot be held by multiple and we would need to free it manually before another process holds it, Mutual Exclusion and No Preemption present</li>
-              <li>For Detecting Hold and wait, we check each programme if it’s holding a resource while requesting a resource that’s already being held, and then highligh the edge between them (in yellow for our case)</li>
-              <li>For Detecting Circular wait, we simply use DFS on node of each node, to look for a cycle, seeing if we end up on a previously visited node, then we highlight the edges in the cycle (in green for our case)</li>
+              <li><span>Creating the RAG using the input given by the user:</span></li>
+              <ul>
+                <li>Enter the number of resources and specify the instances for each resource.</li>
+                <li>Enter the number of processes to include in the graph.</li>
+                <li>To add a Request edge, right-click on a process, then right-click on the resource it is requesting.</li>
+                <li>To add an Assignment edge, right-click on a resource, then right-click on the process that holds it.</li>
+              </ul>
+              <br>
+              <li><span>Finding Deadlock in the Given Graph:</span></li><br>
+                <p>Check for the four necessary conditions for deadlock:</p><br>
+                <ul>
+                  <li><strong>Mutual Exclusion:</strong> Each resource can be held by only one process. (This is always true.)</li>
+                  <li><strong>No Preemption:</strong> Resources must be released manually before being reassigned. (This is also always true.)</li>
+                  <li><strong>Hold and Wait:</strong> For each process, check if it is holding a resource while requesting another that is currently held. If true, the edge is highlighted in yellow. (toggle 'view hold & wait')</li>
+                  <li><strong>Circular Wait:</strong> Use DFS on each node to check for a cycle. If a cycle is found, the edge is highlighted in green. (toggle 'view circular wait')</li>
+                </ul>
             </ol>
             <p>
-              Finally, we would have not only found what the RAG for the given programme and resources in given condition is but also found if the graph results in a deadlock or not.
+              Finally, we would have not only found what the RAG for the given programme and resources in the given condition is but also found if the graph results in a deadlock or not.
             </p>
         </div>
       </div>
@@ -394,21 +401,21 @@ function addResourceInstance() {
             </div>
             <div class="right_pannel">
               <h1>Instructions to Use</h1>
-              <p>Circles represents Processes and Squares represents Resource-Instances</p>
+              <p>Circles represents Processes and Squares represent Resource-Instances</p>
               <img src="./images/Process.png" alt="resouce select" class="Select"><img src="./images/Resource.png" alt="process select" class="Select">
               <p>To select/de-select a Process/Resource-Instance, just right click on it.The selected element will be highlighted with green.</p>
               <img src="./images/process_select.png" alt="process select" class="Select"><img src="./images/resource_select.png" alt="process select" class="Select">
-              <p>To create an Edge, first select a Process/Resource-Instance and then select another Process/Resource-Instance(Edge will be created)</p>
-              <p><img src="./images/Edge1.png" alt="resouce->process" class="Edge">is Assignment Edge</p>
-              <p><img src="./images/Edge2.png" alt="process->resoucre" class="Edge">is Resquest Edge</p>
-              <p>Trying to re-create existing edge, will delete it.(Selection should be as is existing edge, select the tail first and then the head of edge)</p>
+              <p>To create an Edge, first select a Process/Resource-Instance and then select another Process/Resource-Instance. An Edge will be created</p>
+              <p><img src="./images/Edge1.png" alt="resouce->process" class="Edge">is an Assignment Edge</p>
+              <p><img src="./images/Edge2.png" alt="process->resoucre" class="Edge">is a Resquest Edge</p>
+              <p>Re-creating an existing edge will delete it. (The selection order should match the existing edge, with the tail selected first and then the head).</p>
               <img src="./images/Delete1.png" alt="resouce select" class="Edge">
               <img src="./images/Delete2.png" alt="process select" class="Edge">
               <p>
-                Two views are defined "View Hold-Wait" and "View Circular-Wait", both are of main conditions for a deadlock to occur.
+                Two views, "View Hold-Wait" and "View Circular-Wait," are defined to highlight the main conditions for a deadlock to occur.
               </p>
-              <p>To delete a Process/Resource-Instance right click on it after clicking Toggle Delete button.</p>
-              <p id=bolder>"Each button’s label reflects its functionality"</p>
+              <p>To delete a Process/Resource-Instance, right click on it after clicking Toggle Delete button.</p>
+              <p id="bolder">"Each button's label reflects its functionality"</p>
             </div>
           </div>
       </div>
@@ -418,12 +425,11 @@ function addResourceInstance() {
         <div class="title">Result</div>
         <div class="content">
           <!-- <p>From this we obdain the knowledge of what exactly deadlocks are, how they form and what is the importance of detectingn them</p> -->
-          <p>Result</p>
           <br>
-          <p>In this experiment, you created and interacted with a Resource Allocation Graph (RAG) to simulate the allocation and request of resources by processes. By adding multiple processes, resources, and resource instances, and visualizing their interactions, you observed how certain conditions—such as hold-and-wait and circular wait—can lead to a deadlock.
+          <p>In this experiment, you created and interacted with a Resource Allocation Graph (RAG) to simulate the allocation and request of resources by processes. By adding multiple processes, resources, and resource instances, and visualizing their interactions, you observed how certain conditions-such as hold-and-wait and circular-wait can lead to a deadlock.
           </p>
           <br>
-          <p>Through the graphical interface, you were able to identify where these deadlock conditions occurred in real time. This helped reinforce your understanding of how system deadlocks form and how they can be detected using RAG. You also learned how careful resource management and request handling are crucial to avoiding such issues in concurrent systems.</p>
+          <p>Through the graphical interface, you were able to identify where these deadlock conditions occurred in real time. This helped reinforce your understanding of how system deadlocks form and how they can be detected using RAG. You also learned how careful resource management and request handling are crucial to avoiding such issues in concurrent systems.
           </p>
         </div>
       </div>
@@ -434,7 +440,7 @@ function addResourceInstance() {
 
         <!-- Quiz Instructions -->
         <div id="quiz-instructions">
-          <h3>ADD YOUR INSTRUCTIONS HERE</h3>
+          <h3>INSTRUCTIONS</h3>
           <ul>
             <li>Read each question carefully before answering.</li>
             <li>Select the correct option(s).</li>
@@ -481,10 +487,11 @@ function addResourceInstance() {
           <h3>Students</h3>
           <ul class="ref-list">
             <li>
-                <a href="profile url if you have" rel="noopener" target="_blank"
-                  ><span>Jayes Raj Neti, Nitesh Verma</span></a
-                >
-              </li>
+              <a href="https://github.com/ArtificalHuman" rel="noopener" target="_blank"><span>Jayes Raj Neti</span></a>
+            </li>
+            <li>
+              <a href="https://github.com/nitesh4456" rel="noopener" target="_blank"><span>Nitesh Verma</span></a>
+            </li>
           </ul>
           <h3>Mentors</h3>
           <ul class="ref-list">
