--- a/project.html
+++ b/project.html
@@ -15,9 +15,11 @@
         <button class="blue" onclick="visible_ResourceInstance_multiple()">Add Resources</button>
         <!-- <button class="blue" onclick="addResourceInstance()">Add Resource Instance</button> -->
         <button class="blue" onclick="visible_ResourceInstance()">Add Resource Instance</button>
-        <button class="blue" id="hold-button" onclick="show_links_hold_wait()">View Hold & wait </button>
-        <button class="blue" id="circular-button" onclick="show_links_circular_wait()">View Circular wait </button>
-        <button class="blue" id="delete-button" onclick="toggled_Delete()">Toggle Delete</button>
+        <button class="blue" id="hold-button" onclick="show_links_hold_wait()">View Hold-wait </button>
+        <button class="blue" id="circular-button" onclick="show_links_circular_wait()">View Circular-wait </button>
+        <button class="blue" id="delete-button" onclick="toggled_Delete()">Delete</button>
+        <button class="blue" id="reset-button" onclick="toggled_reset()">Reset</button>
+
     </div>
     <div class="input" id="input_process">
         <!-- ADD PROCESS -->
@@ -36,7 +38,7 @@
         when user click on Cancel with using its id "cancel-button" a code is runned in the form which resets the form and 
         chnages the form's class to "input" which is in defult "display:none"
         -->
-        <p>How many Processes, You want to add in the graph ?</p>
+        <p>How many Processes, you want to add in the graph ?</p>
         <form id="process-form">
             <label for="input-for-process"></label>
             <input
@@ -44,7 +46,7 @@
             name="input-for-process"
             id="input-for-process"
             min="1"
-            placeholder="1"
+            placeholder="Enter a number greater than or equal to 1"
             required
             />
             <button type="reset" id="cancel-button">Cancel</button>
@@ -52,8 +54,10 @@
         </form>
     </div>
     <div class="input" id="input_resource_instance">
-        <!-- Similar to abocve but changed ids -->
-        <p>Enter Resource Number (like 1,2,3,,,) in which, You want to add 1 more Resource-Instance.</p>
+        <!-- Similar to above but changed ids -->
+        <!-- <p>Enter Resource Number (like 1,2,3,,,) in which, You want to add 1 more Resource-Instance.</p> -->
+        <p>In which Resource, you want to add 1 more Resource-Instance ?</p>
+
         <form id="resource-form">
             <label for="input-for-resource"></label>
             <input
@@ -61,7 +65,7 @@
             name="input-for-resource"
             id="input-for-resource"
             min="1"
-            placeholder="1"
+            placeholder="Enter a number greater than or equal to 1."
             required
             />
             <button type="reset" id="cancel-button-resorce">Cancel</button>
@@ -70,7 +74,7 @@
     </div>
     <div class="input" id="input_resource_instance_multiple">
         <!-- similar working of above with ids changed -->
-        <p>How Many Resources, You want to add to this graph and how many Resource Instances does they all have ?</p>
+        <p>How many Resources, you want to add in the graph and the minimum Resource Instances does they all have ?</p>
         <form id="resource-form-multiple">
             <label for="input-for-resource-multiple"></label>
             <input
@@ -78,7 +82,7 @@
             name="input-for-resource-multiple"
             id="input-for-resource-multiple"
             min="1"
-            placeholder="Enter Number of Resources"
+            placeholder="Enter number of Resources"
             required
             />
             <label for="input-for-resource-multiple1"></label>
@@ -87,7 +91,7 @@
             name="input-for-resource-multiple1"
             id="input-for-resource-multiple1"
             min="1"
-            placeholder="How many Resource-Instance per Resource"
+            placeholder="Enter minimum number of Resource-Instance per Resource"
             required
             />
             <button type="reset" id="cancel-button-resorce-multiple">Cancel</button>
